# drf-custom-permissions

./: pyproject.toml
